refactor: new project

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Dalex Swift</title>
+  <title>Yenkor</title>
 
   <base href="/" />
 
@@ -30,10 +30,17 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script 
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn30gHlzPINlfeZpaq2C6r4HCPvrwVbrs" async defer>
+</script>
+  <!-- <script async
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn30gHlzPINlfeZpaq2C6r4HCPvrwVbrs">
+</script> -->
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
+  </app-root>
 </body>
 
 </html>
